--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "axios": "^1.6.8",
     "chart.js": "^4.5.1",
+    "docx": "^9.5.2",
+    "docx-preview": "^0.3.7",
     "next": "^14.2.5",
     "primeicons": "^7.0.0",
     "primereact": "^10.6.2",
