--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stomp/stompjs": "^7.3.0",
     "axios": "^1.6.8",
     "chart.js": "^4.5.1",
     "docx": "^9.5.2",
@@ -18,7 +19,8 @@
     "primereact": "^10.6.2",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.1",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sockjs-client": "^1.6.1"
   },
   "devDependencies": {
     "@types/node": "^20.12.8",
